[gd_scene load_steps=3 format=3 uid="uid://d3ar5wrs3qeri"]

[ext_resource type="Theme" uid="uid://dtpd6n45jfurp" path="res://ui/ui_theme.tres" id="1_neojc"]
[ext_resource type="Script" path="res://ui/game_over_screen.gd" id="2_08730"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_neojc")
script = ExtResource("2_08730")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -374.0
offset_top = -226.0
offset_right = 374.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverText" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gap3" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.81

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Kills" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.5
theme_override_font_sizes/font_size = 40
text = "CURRENT:"
vertical_alignment = 1

[node name="Gap4" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.19

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BestKills" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.5
theme_override_font_sizes/font_size = 40
text = "BEST:"
vertical_alignment = 1

[node name="Gap" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.27

[node name="Buttons" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "RESTART"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "QUIT"

[node name="Gap2" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.41

[connection signal="button_down" from="Panel/VBoxContainer/Buttons/RestartButton" to="." method="_on_restart_button_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Buttons/QuitButton" to="." method="_on_quit_button_button_down"]
